src/objects/GW_Common_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_FY_End_Date__c</fullName>
        <label>Current FY End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_FY_Start_Date__c</fullName>
        <label>Current FY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GW Common Settings</label>
</CustomObject>